--- a/scss/components/_custombuttons.scss
+++ b/scss/components/_custombuttons.scss
@@ -318,3 +318,93 @@
         }
     }
 }
+
+.btn-pink {
+    display: inline-block;
+    padding: 0.5rem 1.25rem;
+    color: $light;
+    text-transform: uppercase;
+    font-size: 1rem;
+    letter-spacing: 0.15rem;
+    transition: all 0.3s;
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+    border: none;
+
+    &:after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: $palette1-pink;
+        z-index: -2;
+    }
+
+    &:before {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 0%;
+        height: 100%;
+        background-color: darken($palette1-pink, 10%);
+        transition: all 0.3s;
+        z-index: -1;
+    }
+
+    &:hover {
+        color: $light;
+
+        &:before {
+            width: 100%;
+        }
+    }
+}
+
+.btn-teal {
+    display: inline-block;
+    padding: 0.5rem 1.25rem;
+    color: $light;
+    text-transform: uppercase;
+    font-size: 1rem;
+    letter-spacing: 0.15rem;
+    transition: all 0.3s;
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+    border: none;
+
+    &:after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: darken($palette1-teal, 10%);
+        z-index: -2;
+    }
+
+    &:before {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 0%;
+        height: 100%;
+        background-color: darken($palette1-teal, 20%);
+        transition: all 0.3s;
+        z-index: -1;
+    }
+
+    &:hover {
+        color: $light;
+
+        &:before {
+            width: 100%;
+        }
+    }
+}
